<resources>
    <string name="app_name">Baking App</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="main_title">Baking Time</string>
    <string name="ingredient_quantity">Quantity: </string>
    <string name="ingredient_measure">Measure: </string>
    <string name="ingredient_ingredient">Ingredient: </string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_show_steps">Something went wrong Couldn\'t show Steps</string>
    <string name="error_show_recipe">Something went wrong couldn\'t show Recipe Detail</string>

    <string name="recipe_step_counter">Recipe Step %d of %d</string>
    <string name="describe_previous_recipe_navigation_image">navigate to previous recipe</string>
    <string name="describe_next_recipe_navigation_image">navigate to next recipe</string>
    <string name="tv_ingredients">Ingredients</string>
    <string name="navigation_goto_instructions">Go to next Instructions</string>
    <string name="navigation_back_instructions">This is the last Instruction</string>
    <string name="tv_no_video">This step has no video to play</string>
    <string name="recipe_image">recipe_image</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="add_to_widget">add to widget</string>


</resources>
